syntax = "proto3";
package kompics.benchmarks;

import "messages.proto";

service BenchmarkMaster {
	rpc CheckIn (ClientInfo) returns (CheckinResponse);
}

service BenchmarkClient {
	rpc Setup (SetupConfig) returns (SetupResponse);
	rpc Cleanup (CleanupInfo) returns (CleanupResponse);

	rpc Shutdown (ShutdownRequest) returns (ShutdownAck);
}

message ClientInfo {
	string address = 1;
	uint32 port = 2;
}
message CheckinResponse {}

message SetupConfig {
	string label = 1;
	string data = 2;
}
message SetupResponse {
	bool success = 1;
	string data = 2; // contains custom data if success, otherwise error information
}

message CleanupInfo {
	bool final = 1;
}
message CleanupResponse {}
// message SetupResponse {
// 	oneof sealed_value {
// 		SetupData data = 1;
// 		SetupFailed failed = 2;
// 	}
// }
// message SetupData {
// 	string data = 1;
// }
// message SetupFailed {
// 	string reason = 1;
// }
